force-app/main/default/objects/CIF_Input_Other_Business__c/CIF_Input_Other_Business__c.object-meta.xml
<CustomObject>
    <label>CIF Input Other Business</label>
    <nameField>
        <label>CIF Input Other Business Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIF Input Other Business</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>