force-app/main/default/objects/CIF_Input_Other_Business__c/fields/gross_revenue__c.field-meta.xml
<CustomField>
    <fullName>gross_revenue__c</fullName>
    <label>gross_revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>