force-app/main/default/objects/CIF_Input_Other_Business__c/fields/industry_type__c.field-meta.xml
<CustomField>
    <fullName>industry_type__c</fullName>
    <label>industry_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>