force-app/main/default/objects/CIF_Input_Other_Business__c/fields/job_title__c.field-meta.xml
<CustomField>
    <fullName>job_title__c</fullName>
    <label>job_title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>